--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <div id="posts"></div>
 </div>
 
-<script src="app.js"></script>
+<script src="/service-workets/app.js"></script>
 </body>
 </html>
