--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple PWA</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/service-workets/css/styles.css">
   <link rel="manifest" href="/service-workets/manifest.json">
 <body>
 <nav>
