--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple PWA</title>
-  <link rel="stylesheet" href="/service-workets/css/styles.css">
-  <link rel="manifest" href="/service-workets/manifest.json">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="manifest.json">
+  <script src="app.js" defer></script>
+  <style>
+    h3 {
+      margin-top: 50px;
+    }
+
+    * {
+      font-size: 44px;
+    }
+  </style>
 <body>
 <nav>
-  <h1>VM PWA</h1>
+  <h1>PWA</h1>
 </nav>
-<header>
-  <h2>Изучаем PWA, manifest, Service Workers</h2>
-</header>
 <h3>11</h3>
 <div class="container">
   <div id="posts"></div>
 </div>
 
-<script src="/service-workets/app.js"></script>
 </body>
 </html>
